Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignNumberNumObj.quorum
class Main
    action Main
        Number v
        v:SetValue(5.0)
        Test(v)
    end

    action Test(number var)
        if var = 5.0
            output "passed"
        end
    end
end
