Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberNumObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(5.0)
        Test(v)
    end

    action Test(number var)
    end
end
